group 'io.github.prashant-ramcharan'
version '2.3.1'

apply plugin: 'java'
apply plugin: 'maven-publish'

compileJava {
    sourceCompatibility = 1.8
    targetCompatibility = 1.8
}

repositories {
    jcenter()
}

dependencies {
    compile 'io.cucumber:cucumber-core:2.4.0'
    compile 'io.cucumber:cucumber-java:2.4.0'
    compile 'io.cucumber:cucumber-java8:2.4.0'
    compile 'io.cucumber:cucumber-junit:2.4.0'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.8.8'
}

task buildJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
}

artifacts {
    archives buildJar
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
            artifact buildJar
        }
    }
}